# yaqd-ti

./: .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml  setup.py
yaqd_ti/: __init__.py  _ads1115.py  ads1115.avpr  ads1115.toml
